# cooldown-my-mac

./: .gitignore  README.en.md  README.md  pyproject.toml
cooldown/: cli.py  util.py
cooldown/actions/: apps.py  launchd.py  notify.py  pressure.py  purge.py  reap.py  services.py  sleep_policy.py
cooldown/collectors/: ancestry.py  apps.py  battery.py  dev.py  hostinfo.py  hot_procs.py  launchd.py  leftovers.py  memory.py  ports.py  procs.py  project.py  services.py  system.py  thermal.py  thermal_smc.py
cooldown/daemon/: __init__.py  config.py  default.yaml  installer.py  runner.py
cooldown/daemon/templates/: cooldown.plist
cooldown/safety/: confirm.py  oplog.py
cooldown/ui/: apps.py  daemon.py  dashboard.py  dev.py  launchd.py  menu.py  ports.py  pressure.py  procs.py  reap.py  services.py  thermal.py  watch.py
docs/: menubar-design-spec.md
docs/menubar-prototype/: index.html
docs/menubar-prototype-rich/: index.html
menubar/: Package.swift  README.md  build-app.sh
menubar/Sources/CooldownBar/: App.swift
menubar/Sources/CooldownBar/Model/: CoolClient.swift  Models.swift  RenderShot.swift  SelfTest.swift
menubar/Sources/CooldownBar/Views/: ActionRunner.swift  Components.swift  Gauges.swift  PopoverRootView.swift  RichSections.swift  (+2 more)
tests/: test_ancestry.py  test_apps.py  test_battery.py  test_daemon_config.py  test_daemon_installer.py  test_daemon_runner.py  test_dev.py  test_hostinfo.py  test_hot_procs.py  test_launchd.py  test_leftovers.py  test_ports.py  test_pressure.py  test_proc_errors.py  test_procs.py  test_project.py  test_reap.py  test_services.py  test_sleep_policy.py  test_thermal_smc.py  test_thermal_ui.py  test_util.py  test_watch.py
