[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cooldown-my-mac"
version = "0.1.0"
description = "Runtime thermal & workload manager for heavy Mac users running many AI CLIs 24/7."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "coldxiangyu" }]
keywords = ["macos", "thermal", "process", "cli", "ai", "droid", "codex", "claude"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "psutil>=5.9",
    "rich>=13.7",
    "typer>=0.12",
    "questionary>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
watch = [
    "textual>=0.70",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "textual>=0.70",
]

[project.scripts]
cool = "cooldown.cli:app"
cooldown = "cooldown.cli:app"

[project.urls]
Homepage = "https://github.com/coldxiangyu/cooldown-my-mac"

[tool.hatch.build.targets.wheel]
packages = ["cooldown"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # B008: typer.Option in defaults is idiomatic

[tool.pytest.ini_options]
testpaths = ["tests"]
